MDEV-11126: Crash while altering persistent virtual column

Problem was that if old virtual column is computed and stored there
was no check if new column is really virtual column.